# caste

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.bat  make.sh
.github/workflows/: ci.yml  release.yml  testpypi.yml
cmake/: casteConfig.cmake.in
man/: caste.1
python/: CMakeLists.txt  README.md  caste_bindings.cpp  pyproject.toml
python/caste/: __init__.py
python/tests/: test_caste.py
src/: caste.cpp  caste.hpp  caste_cli.cpp
tests/: test_classify.cpp
