[build-system]
requires = [
    "scikit-build-core>=0.10.0",
    "pybind11>=2.11.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "caste"
version = "0.1.0"
description = "Opinionated hardware classification library."
readme = "../README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.source-dir = ".."
build-dir = "build"
cmake.build-type = "Release"
cmake.define = { CASTE_BUILD_PYTHON = "ON", CASTE_BUILD_TESTS = "OFF", CASTE_BUILD_CLI = "OFF" }
wheel.packages = ["caste"]
